Fix position/spacing for RightNavbar

--- a/src/components/rightNavbar/RightNavbar.css
+++ b/src/components/rightNavbar/RightNavbar.css
@@ -23,14 +23,18 @@ div.right-nav-content-container
 {
   width: 100%;
   height: 816px;
-  padding-left: 40px;
+  padding: 0 29px 0 40px;
+}
+
+div.right-nav-premium-button-container
+{
+  margin-bottom: 28px;
 }
 
 button.right-nav-premium-button
 {
   width: 264px;
   height: 43px;
-  margin-bottom: 28px;
   color: #FFFFFF;
   background-color: #292929;
   border-style: none;
@@ -39,6 +43,11 @@ button.right-nav-premium-button
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
+}
+
+div.right-nav-search-form-container
+{
+  margin-bottom: 28px;
 }
 
 form.right-nav-search-form
